feat(ui): add leave game confirmation modal with localization support
- Introduce LeaveGameModal component for confirming game exit
- Add localized strings for 'Stay' button in English and Russian
- Replace native confirm dialog with custom modal implementation
- Update GameScreen to use new modal instead of window.confirm

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -11,6 +11,7 @@
     "starting": "Game starting...",
     "initializing": "Initializing...",
     "leaveGameConfirm": "Are you sure you want to leave the game?",
+    "leaveGameStay": "Stay",
     "leaveGame": "Leave Game"
   },
   "game": {
