feat(game): enhance trick winner determination with proper lead suit handling and frontend visual feedback
Adds comprehensive test coverage for trick winner logic including edge cases with jokers and trump suits.
Implements visual winner notification in frontend with animations and proper suit icon display for joker requests.
Updates localization files to support trick winner announcements in English and Russian.

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -16,6 +16,7 @@
   },
   "game": {
     "loading": "Loading Game...",
+    "trickWon": "{{player}} Wins!",
     "yourAction": "Your Action",
     "waitingFor": "Waiting for",
     "yourTurn": "YOUR TURN",
