feat(game): add lobby table UI and queue status broadcasting
- Implement LobbyTable component for visualizing queued players
- Add broadcastQueueStatus method to notify all queued players of queue changes
- Enhance lobby UI with animated transitions and improved layout
- Add game over modal and victory localization strings
- Include card animation improvements with initial opacity and scale effects
- Configure timeout values from environment variables for pulka recap and turn timers

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -17,6 +17,12 @@
   "game": {
     "loading": "Loading Game...",
     "trickWon": "{{player}} Wins!",
+    "victory": "Victory!",
+    "gameOver": "Game Over",
+    "congrats": "Congratulations!",
+    "winnerIs": "Winner: {{name}}",
+    "you": "You",
+    "returnToLobby": "Back to Lobby",
     "yourAction": "Your Action",
     "waitingFor": "Waiting for",
     "yourTurn": "YOUR TURN",
