feat(game): implement tuzovanie dealer selection phase with UI overlay
Add tuzovanie (dealer drawing) phase to game flow with visual overlay
on frontend. The tuzovanie process determines the starting dealer
before game begins and shows card distribution to players. Backend
now performs dealer selection via deck service and passes results
to frontend through new socket events.

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -32,7 +32,8 @@
       "trump_selection": "Choose Trump",
       "playing": "Play a Card",
       "finished": "Finished",
-      "waiting": "Waiting"
+      "waiting": "Waiting",
+      "tuzovanie": "Drawing for Dealer"
     },
     "dealerRestriction": "Dealer Restriction",
     "dealerRestrictionText": "You are the dealer. You cannot bet",
