feat(admin): add GameAnalysis component with enhanced card visualization
Add new GameAnalysis component to admin panel for visualizing game data including:
- Enhanced card display with proper suit symbols and colors
- Joker option handling with visual indicators
- Improved trick analysis with winner highlighting
- Support for null/undefined values in card properties

The component now properly handles suit display, rank conversion, and provides
better visual feedback for game state analysis.

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -88,10 +88,10 @@
       "requestHighest": "Request Highest Card",
       "lowRequest": "Low Request",
       "requestLowest": "Request Lowest Card",
-      "takeHigh": "Take High",
-      "beatsHighest": "Beats Highest",
-      "takeLow": "Take Low",
-      "beatsLowest": "Beats Lowest",
+      "takeHigh": "Take Trick",
+      "beatsHighest": "Always wins the trick",
+      "takeLow": "Give Away",
+      "beatsLowest": "Always loses the trick",
       "back": "Back"
     },
     "errors": {
