feat(game): implement timer freezing for single human player scenarios
Add timer freezing logic when only one human player remains in a game room to prevent automatic timeouts during disconnection/reconnection scenarios. The backend now tracks frozen rooms and disables timers when human player count drops to 1, with frontend UI updates to show paused timers with '--' display and 'PAUSED' indicator.

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -27,6 +27,7 @@
     "waitingFor": "Waiting for",
     "yourTurn": "YOUR TURN",
     "opponent": "OPPONENT",
+    "timerFrozen": "PAUSED",
     "phase": {
       "betting": "Place Your Bet",
       "trump_selection": "Choose Trump",
@@ -76,7 +77,10 @@
       "noTrump": "No Trump",
       "noTrumpJoker": "No Trump (Joker Revealed)",
       "confirm": "Confirm",
-      "label": "Trump"
+      "label": "Trump",
+      "redeal": "Redeal",
+      "waitingFor": "{{name}} is choosing",
+      "waitingDescription": "Waiting for trump selection..."
     },
     "joker": {
       "ability": "Joker Ability",
