--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -37,6 +37,10 @@
     "yourTurn": "ВАШ ХОД",
     "opponent": "ОППОНЕНТ",
     "timerFrozen": "ПАУЗА",
+    "rotateDevice": "Поверните устройство",
+    "rotateDeviceHint": "Для лучшего игрового опыта поверните телефон горизонтально",
+    "tapToFullscreen": "Нажмите для полноэкранного режима",
+    "confirm": "Подтвердить",
     "phase": {
       "betting": "Сделайте ставку",
       "trump_selection": "Выберите козырь",
@@ -79,6 +83,7 @@
     "trump": {
       "choose": "Выбор козыря",
       "subtitle": "Выберите масть или игру без козыря",
+      "jokerTrigger": "Выпал Джокер - выбор за вами!",
       "hearts": "Червы",
       "diamonds": "Бубны",
       "clubs": "Трефы",
@@ -106,6 +111,10 @@
       "takeLow": "Отдам",
       "beatsLowest": "Всегда проигрывает взятку",
       "back": "Назад",
+      "high": "ВЫСОК",
+      "low": "НИЗ",
+      "take": "ЗАБЕРУ",
+      "pass": "ОТДАМ",
       "badgeHigh": "Ст",
       "badgeLow": "Мл",
       "badgeTop": "Заберу",
