feat(admin): deliver tournaments CRUD and harden admin flows

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -2,10 +2,35 @@
   "common": {
     "close": "Close"
   },
+  "wallet": {
+    "title": "Wallet",
+    "status": "Status",
+    "connected": "Wallet connected",
+    "notConnected": "Wallet not connected",
+    "connectAction": "Link mock wallet",
+    "disconnect": "Disconnect",
+    "connectShort": "Link",
+    "connectedShort": "Linked",
+    "historyShort": "History",
+    "historyTitle": "Transaction History",
+    "historyLoading": "Loading transactions...",
+    "historyEmpty": "No transactions yet",
+    "historyLoadError": "Failed to load transaction history",
+    "depositAction": "Deposit",
+    "withdrawAction": "Withdraw",
+    "depositTitle": "Deposit (mock)",
+    "withdrawTitle": "Withdraw (mock)",
+    "amountLabel": "Amount (CJ)",
+    "confirmAction": "Confirm",
+    "amountInvalid": "Enter a valid amount",
+    "insufficientFunds": "Insufficient funds",
+    "mockDisclaimer": "This is a mock mode. Real deposits and withdrawals are not available yet."
+  },
   "lobby": {
     "title": "Joker",
     "subtitle": "Card Game",
     "playingAs": "Playing as",
+    "balance": "Balance",
     "devMode": "(Development Mode)",
     "findGame": "Find Game",
     "searching": "Searching for players...",
