--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -2,10 +2,35 @@
   "common": {
     "close": "Закрыть"
   },
+  "wallet": {
+    "title": "Кошелек",
+    "status": "Статус",
+    "connected": "Кошелек подключен",
+    "notConnected": "Кошелек не подключен",
+    "connectAction": "Привязать mock-кошелек",
+    "disconnect": "Отключить",
+    "connectShort": "Привязать",
+    "connectedShort": "Привязан",
+    "historyShort": "История",
+    "historyTitle": "История операций",
+    "historyLoading": "Загружаем операции...",
+    "historyEmpty": "Операций пока нет",
+    "historyLoadError": "Не удалось загрузить историю операций",
+    "depositAction": "Пополнить",
+    "withdrawAction": "Вывести",
+    "depositTitle": "Пополнение (mock)",
+    "withdrawTitle": "Вывод (mock)",
+    "amountLabel": "Сумма (CJ)",
+    "confirmAction": "Подтвердить",
+    "amountInvalid": "Введите корректную сумму",
+    "insufficientFunds": "Недостаточно средств",
+    "mockDisclaimer": "Это mock-режим. Реальные переводы и списания пока недоступны."
+  },
   "lobby": {
     "title": "Джокер",
     "subtitle": "Карточная игра",
     "playingAs": "Вы играете как",
+    "balance": "Баланс",
     "devMode": "(Режим разработки)",
     "findGame": "Найти игру",
     "searching": "Поиск игроков...",
