feat(tournament): ship lobby flow and enforce user sync
Deliver tournament backend/frontend flow and persist Telegram users on websocket connect to prevent runtime-only ghost players in admin/users and economy.

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -42,6 +42,40 @@
     "leaveGameStay": "Stay",
     "leaveGame": "Leave Game"
   },
+  "tournament": {
+    "title": "Tournaments",
+    "subtitle": "Tournament Lobby",
+    "openLobby": "Tournaments",
+    "refresh": "Refresh",
+    "loading": "Loading tournaments...",
+    "loadingDetails": "Loading tournament details...",
+    "empty": "No tournaments available right now",
+    "loadError": "Failed to load tournaments",
+    "actionError": "Failed to complete action",
+    "needUser": "Sign in via Telegram to view tournaments",
+    "defaultTitle": "Tournament",
+    "players": "Players",
+    "registrationFrom": "Registration",
+    "startsAt": "Start",
+    "details": "Details",
+    "back": "Back",
+    "join": "Register",
+    "joined": "Registered",
+    "leave": "Cancel registration",
+    "joinSuccess": "You are registered for this tournament",
+    "leaveSuccess": "Tournament registration has been cancelled",
+    "registrationClosed": "Registration is closed for this tournament",
+    "stage": "Stage",
+    "statuses": {
+      "DRAFT": "Draft",
+      "ANNOUNCED": "Announced",
+      "REGISTRATION": "Registration",
+      "STARTED": "Started",
+      "FINISHED": "Finished",
+      "CANCELLED": "Cancelled",
+      "ARCHIVED": "Archived"
+    }
+  },
   "game": {
     "loading": "Loading Game...",
     "trickWon": "{{player}} Wins!",
