--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -42,6 +42,40 @@
     "leaveGameStay": "Остаться",
     "leaveGame": "Выйти"
   },
+  "tournament": {
+    "title": "Турниры",
+    "subtitle": "Турнирное лобби",
+    "openLobby": "Турниры",
+    "refresh": "Обновить",
+    "loading": "Загружаем турниры...",
+    "loadingDetails": "Загружаем детали турнира...",
+    "empty": "Сейчас нет доступных турниров",
+    "loadError": "Не удалось загрузить турниры",
+    "actionError": "Не удалось выполнить действие",
+    "needUser": "Авторизуйтесь через Telegram, чтобы видеть турниры",
+    "defaultTitle": "Турнир",
+    "players": "Игроки",
+    "registrationFrom": "Регистрация",
+    "startsAt": "Старт",
+    "details": "Детали",
+    "back": "Назад",
+    "join": "Зарегистрироваться",
+    "joined": "Вы зарегистрированы",
+    "leave": "Отменить регистрацию",
+    "joinSuccess": "Вы успешно зарегистрированы на турнир",
+    "leaveSuccess": "Регистрация в турнире отменена",
+    "registrationClosed": "Регистрация закрыта для этого турнира",
+    "stage": "Стадия",
+    "statuses": {
+      "DRAFT": "Черновик",
+      "ANNOUNCED": "Анонс",
+      "REGISTRATION": "Регистрация",
+      "STARTED": "В игре",
+      "FINISHED": "Завершен",
+      "CANCELLED": "Отменен",
+      "ARCHIVED": "Архив"
+    }
+  },
   "game": {
     "loading": "Загрузка игры...",
     "trickWon": "{{player}} выиграл!",
