feat(tournament): add bracket UI and pre-start telegram reminders

--- a/apps/frontend/src/locales/en.json
+++ b/apps/frontend/src/locales/en.json
@@ -66,6 +66,20 @@
     "leaveSuccess": "Tournament registration has been cancelled",
     "registrationClosed": "Registration is closed for this tournament",
     "stage": "Stage",
+    "bracketTitle": "Bracket",
+    "bracketFormat": "Format",
+    "bracketNotAvailable": "Bracket is not generated yet",
+    "bracketPending": "Tournament is in progress",
+    "bracketFinished": "Tournament is finished",
+    "bracketWinner": "Winner",
+    "roundLabel": "Round {{stage}}",
+    "tableLabel": "Table {{index}}",
+    "matchPending": "Match pending",
+    "matchCompleted": "Completed",
+    "slotEmpty": "Open slot",
+    "byeRound": "Bye",
+    "winnerTag": "Winner",
+    "youShort": "You",
     "statuses": {
       "DRAFT": "Draft",
       "ANNOUNCED": "Announced",
