--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -66,6 +66,20 @@
     "leaveSuccess": "Регистрация в турнире отменена",
     "registrationClosed": "Регистрация закрыта для этого турнира",
     "stage": "Стадия",
+    "bracketTitle": "Турнирная сетка",
+    "bracketFormat": "Формат",
+    "bracketNotAvailable": "Сетка пока не сформирована",
+    "bracketPending": "Турнир в процессе",
+    "bracketFinished": "Турнир завершен",
+    "bracketWinner": "Победитель",
+    "roundLabel": "Раунд {{stage}}",
+    "tableLabel": "Стол {{index}}",
+    "matchPending": "Ожидает матч",
+    "matchCompleted": "Матч завершен",
+    "slotEmpty": "Свободный слот",
+    "byeRound": "Автопроход (bye)",
+    "winnerTag": "Победа",
+    "youShort": "Вы",
     "statuses": {
       "DRAFT": "Черновик",
       "ANNOUNCED": "Анонс",
