--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -90,6 +90,32 @@
       "ARCHIVED": "Архив"
     }
   },
+  "leaderboard": {
+    "title": "Лидерборд",
+    "subtitle": "Глобальный рейтинг игроков",
+    "open": "Лидерборд",
+    "refresh": "Обновить",
+    "loading": "Загружаем рейтинг...",
+    "empty": "В рейтинге пока нет игроков",
+    "loadError": "Не удалось загрузить лидерборд",
+    "prev": "Назад",
+    "next": "Вперед",
+    "page": "Страница",
+    "sort": {
+      "rating": "Рейтинг",
+      "wins": "Победы",
+      "games": "Игры",
+      "balance": "Баланс"
+    },
+    "columns": {
+      "rating": "Рейтинг",
+      "balance": "Баланс",
+      "wins": "Победы",
+      "games": "Игры",
+      "winRate": "Винрейт",
+      "places": "Места 1/2/3"
+    }
+  },
   "game": {
     "loading": "Загрузка игры...",
     "trickWon": "{{player}} выиграл!",
