--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -116,6 +116,18 @@
       "places": "Места 1/2/3"
     }
   },
+  "referral": {
+    "title": "Реферальная программа",
+    "open": "Пригласить друзей",
+    "loading": "Загрузка...",
+    "loadError": "Не удалось загрузить данные",
+    "totalEarnings": "Всего заработано",
+    "invitedCount": "Приглашено: {{count}}",
+    "yourLink": "Ваша ссылка",
+    "copy": "Копировать",
+    "copied": "Скопировано!",
+    "description": "Делитесь ссылкой с друзьями. Вы будете получать 10% от комиссии с каждой их игры."
+  },
   "game": {
     "loading": "Загрузка игры...",
     "trickWon": "{{player}} выиграл!",
