--- a/apps/frontend/src/locales/ru.json
+++ b/apps/frontend/src/locales/ru.json
@@ -128,6 +128,36 @@
     "copied": "Скопировано!",
     "description": "Делитесь ссылкой с друзьями. Вы будете получать 10% от комиссии с каждой их игры."
   },
+  "tasks": {
+    "title": "Задания",
+    "subtitle": "Ежедневные миссии",
+    "open": "Задания",
+    "refresh": "Обновить",
+    "refreshing": "Обновляем...",
+    "loading": "Загружаем задания...",
+    "empty": "Сейчас нет активных заданий",
+    "loadError": "Не удалось загрузить задания",
+    "actionError": "Не удалось отправить выполнение задания",
+    "claim": "Забрать",
+    "claiming": "Отправка...",
+    "claimSubmitted": "Задание отправлено на проверку",
+    "claimApproved": "Задание принято, награда начислена",
+    "needUser": "Авторизуйтесь через Telegram, чтобы видеть задания",
+    "reward": "Награда",
+    "verificationLabel": "Проверка",
+    "statuses": {
+      "AVAILABLE": "Доступно",
+      "PENDING": "На проверке",
+      "APPROVED": "Выполнено",
+      "REJECTED": "Отклонено"
+    },
+    "verification": {
+      "AUTO": "Автоматическая",
+      "MANUAL": "Ручная",
+      "LINK_CLICK": "Переход по ссылке",
+      "CODE_ENTRY": "Ввод кода"
+    }
+  },
   "game": {
     "loading": "Загрузка игры...",
     "trickWon": "{{player}} выиграл!",
